fix horizontal scroll

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,7 +5,7 @@
 }
 
 .header {
-  width: 100vw;
+  width: 100%;
   height: 300px;
   display: flex;
   align-items: center;
@@ -18,7 +18,7 @@
 }
 
 .main {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
