--- a/src/styles/components/CharacterDetail.scss
+++ b/src/styles/components/CharacterDetail.scss
@@ -1,3 +1,59 @@
+
+.detail-article{
+  width: 200px;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content:space-between;
+
+
+  &__img{
+   height: 200px;
+  }
+  
+  &__info{
+    font-size: 5px;
+    font-weight:600;
+      width: 400px;
+      height: 100px;
+      display: flex;
+      flex-direction: column;
+      background-color: rgb(47, 179, 255);
+      padding-left: 30px;
+      color: white;
+font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+};
+.returnBtN{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+text-decoration: none;
+color: white;
+background-color:grey;
+font-size: 12px;
+border-radius: 5px;
+height: 27px;
+width: 55px;
+margin-bottom: 40px;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+cursor: pointer;
+margin-left: 500px;
+
+}
+
+.returnBtN:hover{
+      color: white;
+      background-color:rgb(74, 201, 131);
+      transition: width 0.6s;
+      cursor: pointer;
+    
+}
+
+
+@media all and (min-width: 1200px) {
+
 .detail-article{
     width: 700px;
     height: 300px;
@@ -50,3 +106,4 @@
       
 }
 
+};
